@@ -26,7 +26,7 @@ import java.util.stream.IntStream;
  */
 public class TestHashTable extends AbstractSetTest {
 
-    private final List<IOpenHashTableEntity> entities = Arrays.asList(
+    private final List<IOpenHashTableEntity> entities = List.of(
             //uniq
             new Student(0, "A", "CDCD", Student.Gender.MALE, LocalDate.of(1990, 1, 1), 1000),
             new Student(0, "AA", "CCDD", Student.Gender.FEMALE, LocalDate.of(1993, 2, 2), 1001),
@@ -64,7 +64,7 @@ public class TestHashTable extends AbstractSetTest {
     @Before //Запускается перед запуском каждого теста
     public void createSortedSets() {
         validSet = new HashSet<>();
-        testSet = new OpenHashTable<>(IOpenHashTableEntity.class);
+        testSet = new OpenHashTable<>();
     }
 
     @Test
